Fixing CDC+HID, preparing basic keyboard behaviour, import oled classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ pico_sdk_init()
 add_executable(keymaster
     src/main.cpp
     src/usb_descriptors.cpp
+    src/display/ssd1306.cpp
+    src/sprite/dict8.cpp
+    src/sprite/sprite.cpp
+    src/unused_callbacks.cpp
 )
 
 target_include_directories(keymaster PUBLIC
@@ -16,6 +20,7 @@ target_include_directories(keymaster PUBLIC
 
 target_link_libraries(keymaster
     pico_stdlib
+    hardware_i2c
     tinyusb_device
     tinyusb_board
 )
