--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,9 @@ add_executable(keymaster
     src/sprite/menu.cpp
     src/pers/persistency.cpp
 )
-pico_generate_pio_header(keymaster  ${CMAKE_CURRENT_LIST_DIR}/src/pio_pwm.pio)
+pico_generate_pio_header(keymaster
+    ${CMAKE_CURRENT_LIST_DIR}/src/pio_pwm.pio
+)
 
 target_include_directories(keymaster PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src
